APS-127-FE: frontend done for pdf download pages.

--- a/source/themes/custom/apextoolgroup/styles/base/_variables.scss
+++ b/source/themes/custom/apextoolgroup/styles/base/_variables.scss
@@ -49,3 +49,6 @@ $mobile: 320px;
 $tablet: 766.9px;
 $tablet-max: 959px;
 $desktop: 1024px;
+$desktop-large: 1072px;
+$mobile-lanscape: 560px;
+$mobile-medium:480px;
