--- a/source/themes/custom/apextoolgroup/styles/components/_privacy-policy.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_privacy-policy.scss
@@ -64,75 +64,122 @@
     }
   }
 }
-// code for policy registeration page 
-.page-node-type-policies-registration {
-  .node__meta {
-    display: none;
-    font-family: $nacelle;
+// code for policy registeration page
+.product_registeration_page {
+  // code for page title starts here
+  .page-titlebar {
+      background: rgb(205,205,205);
+      padding: 20px;
+      color: #000000;
+      font-size: 2.2291rem;
+      line-height: 3.15rem;
+      text-align: center;
+      font-family: Arial;
+      font-weight: 700;
+      @media screen and (max-width: $tablet) {
+        font-size: 1.22rem;
+        line-height: 2.15rem;
+      }
   }
-  .field--name-field-display-title {
-    background: rgb(205,205,205);
-    padding: 2rem 32rem;
-    color: #000000;
-    font-size: 2.2291rem;
-    line-height: 3.15rem;
-    text-align: center;
-    font-family: Arial;
-    font-weight: 700;
-  }
-  .field--name-field-downloadpolicy-component {
+  // code for cads wrapper starts here
+  .product-pdf-cards-wrapper {
     padding: 2rem 13rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     background-color: #fff;
-    .field__item {
+    //css for cards 
+    .product-wrapper-cards {
       width: 46%;
       margin: 1% 2%;
-      .paragraph--type--policies-registration {
-       background: rgb(205,205,205);
-       border: 0.1875rem solid #007DC3;
-       border-radius: 0.625rem;
-       padding:20px;
+      background: rgb(205,205,205);
+      border: 0.1875rem solid #007DC3;
+      border-radius: 0.625rem;
+      padding:20px;
+      min-height: 95px;
+      text-align: center;
+      // css for cards-heading 
+      .product-card-heading {
+        width: 100%;
+        margin: 0 auto;
+        background: #007DC3 ;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 5px;
+        color: #fff;
+        line-height: 2.15rem;
+        font-size: 1.25rem;
+        word-wrap: break-word;
+        font-family: $nacelle;
+        border-radius: 0.625rem;
+        text-align: center;
+      }
+      //css for description 
+      .product-card-description {
+       width: 100%;
+       margin: 10px 0px;
+       line-height: 1.4rem;
+       font-size: 0.9907rem;
+       justify-content: center;
+       align-items: center;
+       font-size: 15px;
+       display: flex;
+       min-height: 85px;
+       max-height: 120px;
+       line-height: 17px;
+       @media screen and (max-width:$mobile-medium) {
+         height: unset;
+         padding: 0px 10px;
+        }
+      }
+      //css for download buttons
+      .product-pdf-download {
+       display: flex;
+       margin: 0 auto;
+       flex-wrap: wrap;
        text-align: center;
-       .field--name-field-downloadpolicy-label {
-        .field__item {
-          width: 100%;
-          margin: 0 auto;
-          background: #007DC3 ;
-          padding: 5px;
-          color: #fff;
-          line-height: 3.625rem;
-          font-size: 2.8576rem;
-          word-wrap: break-word;
-          font-family: $nacelle;
-          border-radius: 0.625rem;
-          text-align: center;
+       justify-content: center;
+       a{
+        width: 44%;
+        @media screen and (max-width:$mobile-medium) {
+          width: 80% !important;
+         }
+         &:hover {
+          cursor: pointer;
+          background-color: $black;
+         }
+        margin: 2%;
+        padding: 10px 0px;
+        background-color: #007DC3;
+        color: $white;
+        border-radius: 0.625rem;
+        text-decoration: none;
+        cursor: pointer;
+        line-height: 1.25rem;
+        font-size: 1rem;
+        word-wrap: break-word;
+        font-family: $nacelle;
+        &:nth-child(1){
+          width: 90%;
         }
-       }
-       .field--name-field-downloadpolicy-description {
-        .field__item {
-          width: 100%;
-          padding: 20px 10px;
-          line-height: 1.4rem;
-          font-size: 0.9907rem;
+        &:only-child {
+          width: 48%;
         }
        }
       }
-    }
-  }
-  .field--name-field-download-policy-file-pdf{
-    .field__item {
-      width: 100%;
-      .paragraph--type--file-with-text {
-        .field__label {
-          display: none;
-        }
+      @media screen and (max-width:$tablet) {
+        width: 98%;
+        margin: 1% auto;
       }
     }
-  }
-}  
+    @media screen and (max-width: $desktop-large) {
+      padding: 2rem;
+    }
+  } 
+}
+// code for form starts here
 .field--name-field-policies-registration-webf {
   background: repeat top center / cover fixed;
   background-image: url('https://v.fastcdn.co/u/7e4e9c2d/30847686-0-APEX---Mt.Everest-Ed.jpg');
@@ -163,13 +210,17 @@
         font-size: 0.9907rem;
         font-family: Arial;
         font-weight: 400;
-        height: 3.125rem;
-        width: 18.75rem;
         border-radius: 10px;
         &:hover{
           background-color: darkgrey;
         }
       }
+    }
+    @media screen and (max-width: $tablet-max){
+      width: 55%;
+    }
+    @media screen and (max-width: $mobile-lanscape){
+      width: 92%;
     }
   }
 }
