APS-176 Adjust orange banner width in case study content type.

--- a/docroot/themes/custom/cleco/src/scss/components/_case-study.scss
+++ b/docroot/themes/custom/cleco/src/scss/components/_case-study.scss
@@ -28,6 +28,8 @@
       margin-right: 0;
       background-color: $color-orange;
       padding: calc(2rem + 0.5 * (100vh - 45rem) / 30) calc(1rem + 5 * (100vw - 20rem) / 67.5);
+      position: absolute;
+      width: 100%;
 
       .hero-title-prefix {
         text-transform: uppercase;
