APS-127: thank you page added.

--- a/source/themes/custom/apextoolgroup/styles/components/_privacy-policy.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_privacy-policy.scss
@@ -64,6 +64,7 @@
     }
   }
 }
+
 // code for policy registeration page
 .product_registeration_page {
   // code for page title starts here
@@ -221,6 +222,25 @@
     }
     @media screen and (max-width: $mobile-lanscape){
       width: 92%;
+    }
+  }
+}
+//css for thank you page 
+.thank-you-page {
+  width: 70%;
+  padding: 150px 50px;
+  text-align: center;
+  margin: 47px auto;
+  border-radius: 1rem;
+  background: rgb(205,205,205);
+  border: 0.1875rem solid #007DC3;
+  @media screen and (max-width: $mobile-medium) {
+    width: 90%;
+    padding: 50px 10px;
+  }
+  .thank-you-text {
+    h3 {
+      line-height: 28px;
     }
   }
 }
