--- a/docroot/themes/custom/apex_tools/src/scss/components/_multi-step-form.scss
+++ b/docroot/themes/custom/apex_tools/src/scss/components/_multi-step-form.scss
@@ -128,14 +128,20 @@
     }
   }
 
-  // First set of third step
-  #edit-field-quotation-screwdriver-styl-wrapper {
-    display: inline-block;
-    padding: 0 2rem 2rem;
-    width: 98%;
+  .tabledrag-toggle-weight-wrapper {
+    display: none;
+  }
+}
 
+// First set of third step
+#edit-field-quotation-screwdriver-styl-wrapper {
+  display: inline-block;
+  padding: 0 2rem 2rem;
+  width: 98%;
+
+  & > div {
     & > div {
-      & > div {
+      & > table {
         thead {
           display: block;
           background-color: transparent;
@@ -168,7 +174,7 @@
             display: grid;
             grid-template-columns: 30% 20% 42%;
             grid-column-gap: 4%;
-  
+
             .form-item {
               display: flex;
               flex-direction: column;
@@ -177,7 +183,7 @@
             .js-form-type-radio {
               flex-direction: row;
             }
-  
+
             label {
               margin-bottom: 0;
             }
@@ -206,92 +212,6 @@
         }
       }
     }
-  }
-
-  // Second set of third step.
-  #edit-field-quotation-universal-swivel-wrapper {
-    display: inline-block;
-    padding: 0 2rem 2rem;
-    width: 98%;
-
-    & > div {
-      & > div {
-        thead {
-          display: block;
-          background-color: transparent;
-          tr,
-          th {
-            display: block;
-            color: $color-orange;
-            padding: 0 !important;
-            border: 0;
-
-            h4 {
-              font-size: 1.4rem;
-              margin-bottom: 0;
-              font-weight: 500;
-              text-transform: initial;
-              padding: 1rem;
-            }
-          }
-        }
-
-        tbody {
-          display: grid;
-          grid-template-columns: 49% 49%;
-          grid-column-gap: 2%;
-          td {
-            border: 0;
-            display: block;
-          }
-        }
-      }
-    }
-  }
-
-  // Third set of third step.
-  #edit-field-socket-extension-adapter-wrapper {
-    display: inline-block;
-    padding: 0 2rem 2rem;
-    width: 98%;
-
-    & > div {
-      & > div {
-        thead {
-          display: block;
-          background-color: transparent;
-          tr,
-          th {
-            display: block;
-            color: $color-orange;
-            padding: 0 !important;
-            border: 0;
-
-            h4 {
-              font-size: 1.4rem;
-              margin-bottom: 0;
-              font-weight: 500;
-              text-transform: initial;
-              padding: 1rem;
-            }
-          }
-        }
-
-        tbody {
-          display: grid;
-          grid-template-columns: 49% 49%;
-          grid-column-gap: 2%;
-          td {
-            border: 0;
-            display: block;
-          }
-        }
-      }
-    }
-  }
-
-  .tabledrag-toggle-weight-wrapper {
-    display: none;
   }
 }
 
