APS-193 : code updated to hide menu button from cleco footer.

--- a/docroot/themes/custom/cleco/src/scss/components/_footer.scss
+++ b/docroot/themes/custom/cleco/src/scss/components/_footer.scss
@@ -89,7 +89,7 @@
 .footer-branding .button {
     margin-top: 4rem;
     margin-bottom: 2rem;
-
+    display: none;
     &:not([disabled]):hover:not(.button--outline),
     &:not([disabled]):focus:not(.button--outline) {
         background: lighten($color-orange, 4%);
