--- a/docroot/themes/custom/cleco/src/scss/components/_industry-solutions-home.scss
+++ b/docroot/themes/custom/cleco/src/scss/components/_industry-solutions-home.scss
@@ -11,11 +11,22 @@
     @media only screen and (max-width: $media-screen-medium) {
       flex: 0 0 50%;
       max-width: 50%;
-      padding: 2px;
     }
 
     .overlay-wrapper {
       position: relative;
+
+      @media only screen and (min-width: $media-screen-large) {
+        height: 394px;
+      }
+
+      @media only screen and (max-width: $media-screen-tablet) {
+        max-height: 429px;
+      }
+
+      @media only screen and (max-width: $media-screen-mobile) {
+        max-height: 324px;
+      }
 
       &::before {
         content: "";
@@ -52,10 +63,6 @@
             0: 2em,
             800px: 3.125em,
           ))
-        }
-
-        img {
-          display: block;
         }
       }
 
