support/APS-196: Added a dynamic title above the succesful case studies componenet

--- a/docroot/themes/custom/cleco/templates/content/field--field-trusted-by-biggest.html.twig
+++ b/docroot/themes/custom/cleco/templates/content/field--field-trusted-by-biggest.html.twig
@@ -1,4 +1,5 @@
 <div class = "main">
+{{ node_title }}
  {{ drupal_view('successful_automative_solutions', 'case_study') }}.
 </div>
 <div class="main">
