APS-200: code updated for fromtend issue on solution block on industrial page.

--- a/docroot/themes/custom/cleco/templates/content/field--field-trusted-by-biggest.html.twig
+++ b/docroot/themes/custom/cleco/templates/content/field--field-trusted-by-biggest.html.twig
@@ -1,5 +1,8 @@
 <div class = "main">
-{{ node_title }}
+<section class="section solutions-cards-wrapper">
+  <h2 class="section-title"><em>Sucessfull</em> {{ node_title }} Solutions</h2>
+</section>
+
  {{ drupal_view('successful_automative_solutions', 'case_study') }}.
 </div>
 <div class="main">
