--- a/docroot/themes/custom/cleco/src/scss/components/_solution-case-study.scss
+++ b/docroot/themes/custom/cleco/src/scss/components/_solution-case-study.scss
@@ -1,13 +1,23 @@
 /* css for case study components on industrial page */
+.solutions-cards-wrapper {
+    padding-top: 0px !important;
+    padding-bottom: 0px !important;
+}
 .solution-case-study-row {
     display: flex;
     flex-wrap: wrap;
     .solution-case-study-card {
-        width: 31%;
-        margin: 1% 1%;
+        width: 23%;
+        margin: 1% 3%;
         .solution-card-image {
-          margin-bottom: 30px;
+            padding: 5px;
+            background: $color-accent-bg;
+            margin-bottom: 30px;
           div {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            text-align: center;
             img{
                 width: 100%;
             }
@@ -28,7 +38,7 @@
             }
         }
         @media(max-width: $media-screen-medium) {
-            width: 47%;
+            width: 44%;
         }
         @media (max-width: $media-screen-mobile) {
             width: 97%;
