APS-147: Theme, twig files, JS and CSS,Config file

--- a/docroot/themes/custom/cleco/src/scss/components/_accordion.scss
+++ b/docroot/themes/custom/cleco/src/scss/components/_accordion.scss
@@ -71,4 +71,15 @@
   }
 }
 
+.hubspot-tabs-content li {
+  display: none;
 
+  &.active {
+    display: block;
+    min-width: 100%;
+
+    &.link-field {
+      display: none;
+    }
+  }
+}
