--- a/docroot/themes/custom/cleco/src/scss/components/_checkable-cards.scss
+++ b/docroot/themes/custom/cleco/src/scss/components/_checkable-cards.scss
@@ -16,6 +16,12 @@ $breakpoint-checkable-card-vertical: $breakpoint-nav-inline;
     flex-basis: 100%;
     @include property-scale(padding, map-multiplier($checkable-card-gap-map, 0.5));
     -webkit-tap-highlight-color: transparent;
+
+    &.active-tab {
+      .selected {
+        opacity: 1;
+      }
+    }
 }
 .checkable-card {
     position: relative;
@@ -29,6 +35,7 @@ $breakpoint-checkable-card-vertical: $breakpoint-nav-inline;
     padding: 0.625em 1.25em;
     width: 100%;
     transition: background 200ms ease, border 200ms ease, box-shadow 200ms ease;
+    color: $color-off-black;
 }
 .checkable-card-input {
     @include visually-hidden;
@@ -44,7 +51,8 @@ $breakpoint-checkable-card-vertical: $breakpoint-nav-inline;
         height: 2.5rem;
     }
 
-    svg {
+    svg,
+    img {
         width: 2.5em;
         height: 2.5em;
     }
@@ -56,7 +64,6 @@ $breakpoint-checkable-card-vertical: $breakpoint-nav-inline;
     }
 
     &::before {
-        content: attr(data-selected-text);
         font-size: 0.75rem;
         font-weight: normal;
         transition: 200ms ease;
@@ -66,6 +73,18 @@ $breakpoint-checkable-card-vertical: $breakpoint-nav-inline;
             display: none;
         }
     }
+
+    .selected {
+      opacity: 0;
+      font-size: 0.85rem;
+      font-weight: normal;
+      transition: 200ms ease;
+      color: #fff;
+
+      @media only screen and (max-width: $media-screen-tablet) {
+          display: none;
+      }
+  }
 }
 /**
  * CHECKED STATES
@@ -80,11 +99,16 @@ $breakpoint-checkable-card-vertical: $breakpoint-nav-inline;
         transform: translateY(1em);
     }
 }
-.checkable-card-input:checked + .checkable-card {
+.checkable-card-input:checked + .checkable-card,
+.views-row.active-tab .checkable-card {
     background: $color-orange;
     border-color: $color-orange;
     color: #fff;
     box-shadow: 0 0.125em 1.25em rgba(#000, 0.23);
+
+    img {
+      filter: brightness(0) invert(1);
+    }
 }
 /**
  * HOVER/FOCUS STATE
@@ -103,18 +127,18 @@ $breakpoint-checkable-card-vertical: $breakpoint-nav-inline;
         flex-basis: 100%;
     }
     .checkable-card-label {
-        padding-left: 1rem;
-        flex-grow: 1;
+      padding-left: 1rem;
+      flex-grow: 1;
 
-        &::before {
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            text-align: center;
-            padding: 0.5em;
-            writing-mode: vertical-lr;
-        }
+      &::before {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        text-align: center;
+        padding: 0.5em;
+        writing-mode: vertical-lr;
+      }
     }
 
     .checkable-card-input:not(:checked) + .checkable-card {
@@ -143,25 +167,32 @@ $breakpoint-checkable-card-vertical: $breakpoint-nav-inline;
         flex-grow: 1;
         padding-top: 1.25em;
 
-        svg {
+        svg,
+        img {
             width: 4.6875em;
             height: 4.6875em;
         }
     }
 
     .checkable-card-label {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        flex-basis: 5em;
-        font-size: 1.125em;
-        text-align: center;
-        width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      flex-basis: 5em;
+      font-size: 1.125em;
+      font-weight: 500;
+      text-align: center;
+      width: 100%;
 
-        &::before {
-            letter-spacing: 0.015625em;
-            padding-bottom: 0.5em;
-        }
+      &::before {
+        letter-spacing: 0.015625em;
+        padding-bottom: 0.5em;
+      }
+
+      .selected {
+        letter-spacing: 0.015625em;
+        padding-bottom: 0.5em;
+      }
     }
 
     .checkable-card-input:checked + .checkable-card {
