APS-206: code done for case study listing pagination.

--- a/docroot/themes/custom/cleco/src/scss/components/_solution-case-study.scss
+++ b/docroot/themes/custom/cleco/src/scss/components/_solution-case-study.scss
@@ -1,5 +1,10 @@
 /* css for case study components on industrial page */
-
+.solutions-cards-wrapper {
+    .pagination {
+        background-color: #fff;
+        margin-bottom: 10px;
+    }
+}
 .solution-case-study-row {
     display: flex;
     flex-wrap: wrap;
