--- a/docroot/themes/custom/cleco/templates/patterns/hero.html.twig
+++ b/docroot/themes/custom/cleco/templates/patterns/hero.html.twig
@@ -80,6 +80,6 @@
 </div>
  <div class="hero-video-banner-text"> 
   {% if title is not null %}
-   <h2>Tame the Line </h2>
+   <h2 class="section">Tame the Line </h2>
   {% endif %}
  </div>
