APEX-655: PDF styling

--- a/docroot/themes/custom/apex_tools/src/scss/components/_multi-step-form.scss
+++ b/docroot/themes/custom/apex_tools/src/scss/components/_multi-step-form.scss
@@ -1072,6 +1072,19 @@ div.notice--info {
   }
 }
 
+[data-drupal-selector$="subform-field-socket-type-wrapper"] {
+  tbody,
+  tr,
+  td {
+    display: block;
+    width: 100%;
+  }
+
+  .form-item img {
+    top: -8px !important;
+  }
+}
+
 [data-drupal-selector$="subform-field-socket-dimensions-label-wrapper"] {
   table {
     border-bottom: solid 3px $color-gray-medium;
