--- a/source/themes/custom/apextoolgroup/styles/components/_privacy-policy.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_privacy-policy.scss
@@ -183,7 +183,7 @@
 // code for form starts here
 .field--name-field-policies-registration-webf {
   background: repeat top center / cover fixed;
-  background-image: url('https://v.fastcdn.co/u/7e4e9c2d/30847686-0-APEX---Mt.Everest-Ed.jpg');
+  background-image: url('../images/formbackground.webp');
   padding: 10px 0px;
   .webform-submission-form {
     background-color: rgba(255,255,255 , .75);
@@ -241,6 +241,132 @@
   .thank-you-text {
     h3 {
       line-height: 28px;
+    }
+  }
+}
+
+// css for landing page ploicy reseller
+.page-node-type-reseller-policies-landing-page-  {
+  .node__meta {
+    display: none;
+  }
+}
+
+.registeration-landing {
+  .page-titlebar {
+    font-size: 1.55rem;
+    line-height: 1.75rem;
+    @media screen and (max-width:$mobile-medium) {
+      font-size: 1rem;
+      line-height: 1.2rem;
+      padding: 20px 3px;
+     }
+  }
+  .registeraion-information {
+    padding: 10px 0px;
+    p {
+      padding: 5px 0px;
+    }
+    .heading-bold {
+      font-weight: 700;
+    }
+  }
+}
+
+.policy-pages-links-wrapper {
+  background: repeat top center / cover fixed;
+  background-image: url('../images/formbackground.webp');
+  padding: 30px 0px;
+}
+.registration-landing-page-heading {
+  background: #007DC3 ;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  color: #fff;
+  line-height: 2.15rem;
+  font-size: 1.75rem;
+  word-wrap: break-word;
+  font-family: $nacelle;
+  border-radius: 0.625rem;
+  text-align: center;
+  width: 70%;
+  margin: 0 auto;
+  @media screen and (max-width: $mobile-lanscape){
+    width: 100%;
+  }
+}
+.register-pages-card-wrapper {
+  padding: 40px 0px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-self: center;
+  text-align: center;
+  .register-page-card {
+    width: 22%;
+    margin: 1%;
+    background: rgb(205,205,205);
+    border: 0.1875rem solid #007DC3;
+    border-radius: 0.625rem;
+    padding:20px;
+    min-height: 95px;
+    .register-card-heading {
+      background: #007DC3 ;
+      padding: 5px;
+      color: #fff;
+      line-height: 2.15rem;
+      font-size: 1.75rem;
+      word-wrap: break-word;
+      font-family: $nacelle;
+      border-radius: 0.625rem;
+      width: 100%;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .register-card-text {
+      width: 100%;
+      margin: 10px 0px;
+      line-height: 1.4rem;
+      font-size: 0.9907rem;
+      justify-content: center;
+      align-items: center;
+      font-size: 15px;
+      display: flex;
+      height: 180px;
+      margin-bottom: 20px;
+      @media screen and (max-width:$tablet-max){
+        height: 115px;
+      }
+       @media screen and (max-width:$mobile-medium) {
+         height: unset;
+         padding: 0px 10px;
+        }
+    }
+    .register-page-link {
+      margin: 35px 0px 10px 0px;
+      a{
+        text-decoration: none;
+        margin: 20px 0px;
+        padding: 10px 30px;
+        text-align: center;
+        background: #007DC3;
+        color: #FFFFFF;
+        font-size: 1.27rem;
+        font-family: Arial;
+        font-weight: 400;
+        border-radius: 10px;
+        &:hover{
+          background-color: black;
+        }
+      }
+    }
+    @media screen and (max-width:$tablet-max){
+      width: 47%;
+      margin: 2% 1%;
+    }
+    @media screen and (max-width:$tablet) {
+      width: 97%;
     }
   }
 }
